fix empty space at the bottom of page when rotating screen on mobile, and fix empty space between first_row-box and second_row-box

--- a/style.css
+++ b/style.css
@@ -46,11 +46,11 @@ img {
     height: auto;
 }
 
-html, body {
+body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
@@ -110,6 +110,7 @@ html, body {
     background-color: #1F2937;
     margin-left: -10px;
     margin-right: -10px;
+    margin-top: -5px;
     padding: 10px;
     padding-left: 100px;
     padding-right: 100px;
